[package]
name = "shadplay"
version = "0.0.2"
resolver = "2"
edition = "2021"
authors = ["jeremy webb <alphastrata@gmail.com>"]
license = "MIT"
description = """
Shadplay is a simple, (WIP) application that provides a window where shader code is applied to Bevy mesh geometry. The primary goal of shadplay is to allow users to see immediate changes to their shader code. This is achieved by leveraging Bevy's file-watcher system, which automatically recompiles and updates the shader on the mesh whenever the user saves their changes in their editor of choice. shadplay is designed to provide the lowest barrier to entry for individuals who want to learn or practice using WGSL (WebGPU Shading Language) for the purposes of doing work in Bevy.
"""

[[example]]
name = "might"
path = "examples/might/src/main.rs"
description = "Might, is an attempt to recreate the legendary Pally aura of the same name from Diablo II"

[features]
default = ["ui"]
wayland = ["bevy/wayland"]
ui = []

[dependencies]
anyhow = "1.0.79"
bevy = { version = "0.14.1", features = ["file_watcher", "jpeg"] }
bevy_egui = { version = "0.29.0" }
bevy_panorbit_camera = "0.19.3"
chrono = "0.4.34"
copypasta = "0.10.0"
directories = "5.0.1"
image = "0.25.1"
serde = { version = "1.0.190", features = ["derive"] }
toml = "0.8.10"

[dev-dependencies]
bevy = { version = "0.14.1", features = [
  "file_watcher",
  "jpeg",
  "dynamic_linking",
] }

[build-dependencies]
reqwest = "0.11.*"
tokio = { version = "1", features = ["full"] } # Required for Might
glob = "0.3.1"

[profile.dev] # A little bit of optimisation for dev builds
opt-level = 2
