[package]
name = "pally_aura"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = [
  "file_watcher",
  "dynamic_linking",
  "jpeg",
] }
bevy_editor_pls = { git = "https://github.com/zhaop/bevy_editor_pls" } #"0.6.0"                                                        # Required for Might
bevy_panorbit_camera = { git = "https://github.com/kristoff3r/bevy_panorbit_camera" } #"0.18.3?"

[dev-dependencies.bevy]
opt-level = 3
